Own by test user

--- a/mjit-test/Dockerfile
+++ b/mjit-test/Dockerfile
@@ -5,7 +5,12 @@ FROM k0kubun/ruby:2.6.0-preview2
 RUN apt-get update && DEBIAN_FRONTEND=noninteractive apt-get install -y tzdata sudo
 
 # Some file permission tests don't succeed with root.
-# But root privilege is also needed to modify /etc/hosts.
 RUN useradd -s /bin/bash test
+
+# But root privilege is also needed to modify /etc/hosts.
 RUN echo "test ALL=NOPASSWD: ALL" >> /etc/sudoers
+
+# `mkdir -p /pipeline` is needed beforehand
+RUN chown test:test /
+
 USER test
