Revert "Upgrade node-wine"
This reverts commit 7bc66bf0993d9a7232dd45d21cc3793f48c6fb48.

--- a/node-wine/Dockerfile
+++ b/node-wine/Dockerfile
@@ -1,5 +1,12 @@
-FROM ubuntu:20.04
+FROM ubuntu:18.04
 MAINTAINER k0kubun
+
+# node-gyp build crashes with nodejs v10, so using nodejs v8.
+# gnupg is needed to `apt-key add`. curl is needed to fetch pubkey.
+# "python" and "make"/"g++" (build-essential) are needed to install node-gyp.
+# gcc/g++-multilib are needed to build 32bit packages and require --no-install-recommends.
+# wine and wine32 are used for building Windows packages. wine32 requires `dpkg --add-architecture i386`.
+# git is used by bower. zip is used at Nocturn's travis.
 
 RUN apt-get update && apt-get install -y curl gnupg && \
   curl -sS https://dl.yarnpkg.com/debian/pubkey.gpg | apt-key add - && \
